# revent-api

./: .coverage  .dockerignore  .env.example  .env.sample  .gitignore  .openhands_instructions  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  heroku.yml  launch.json.example  launch.py  manage.py  newMakefile  notebook.ipynb  pyproject.toml  pytest.ini  sample.env.dev  terraform.tfstate
.env-sample/docker/: api.env  db.env  main.env  nginx.env
.env-sample/local/: api.env
.env-sample/terraform/: main.env
.github/workflows/: django.yml
.sample.env/docker/: api.sample.env  db.sample.env
.sample.env/terraform/: main.sample.env
commons/: aws_s3.py
config/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: update-ecs.py
docker/: .dockerignore  Dockerfile  Makefile  api.env  db.env  docker-compose.local.yml  docker-compose.yml  main.env  main.sample.env  nginx.env
integrations/aws/: s3.py
local/: .env-sample  Makefile
nginx/: Dockerfile  nginx.conf
photo/: admin.py  create_bucket.py  custom_viewsets.py  filters.py  fixtures.py  input.py  inputs.py  manager.py  models.py  mutations.py  permissions.py  queries.py  schema.py  serializers.py  storages_backend.py  types.py  urls.py  views.py
photo/migrations/: 0001_initial.py  0002_add_description_to_picture.py  0002_alter_collection_pictures_and_more.py  0002_alter_contest_date_end_alter_contest_date_start_and_more.py  0002_alter_user_email.py  0002_alter_user_managers.py  0002_contest_internal_status_contest_voting_draw_end.py  0003_alter_contest_prize_alter_contest_title.py  0003_alter_contest_winners.py  0003_alter_user_managers.py  0003_comment_created_at_comment_updated_at_and_more.py  (+32 more)
revent/: asgi.py  settings.py  urls.py  wsgi.py
services/: google_login_service.py
terraform/: .sample.env  .terraform.lock.hcl  02_network.tf  02_remote.tf  03_acm.tf  03_loadbalancer.tf  03_securitygroups.tf  04_loadbalancer.tf  04_logs.tf  05_iam.tf  06_logs.tf  07_discovery.tf  07_ecs.tf  07_efs.tf  07_s3.tf  08_ecs.tf  08_efs.tf  09_auto_scaling.tf  09_ecs.tf  10_rds.tf  11_storage.tf  Makefile  backend.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: create_bucket.py  factories.py  test_db_integrity.py  test_models.py
utils/: enums.py  helper.py  middleware.py
(+86 files in other folders)
