[tool.poetry]
name = "photo-contest-api"
version = "0.1.0"
description = ""
authors = ["JVerissimo <j.verissimo@runtime-revolution.com>"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
strawberry-graphql = "^0.105.0"
django-environ = "^0.8.1"
gunicorn = "^20.1.0"
isort = "^5.10.1"
strawberry-graphql-django = "^0.2.5"
factory-boy = "^3.2.1"
djangorestframework-simplejwt = "^5.2.1"
Pillow = "^9.2.0"
boto3 = "^1.25.2"
django-storages = "^1.13.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


