[tool.poetry]
name = "photo-contest-api"
version = "0.1.0"
description = ""
authors = ["JVerissimo <j.verissimo@runtime-revolution.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
strawberry-graphql = "^0.105.0"
django-environ = "^0.8.1"
gunicorn = "^20.1.0"
isort = "^5.10.1"
strawberry-graphql-django = "^0.2.5"
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120